lox-tests/tests/field/get_on_class.stderr
ERROR: Only class instances have properties
 --> 2:1
  |
2 | Foo.bar; // expect runtime error: Only instances have properties.
  | ^-----^
